<resources>
    <string name="app_name">Phone</string>

    <string name="key1_num">1</string>
    <string name="key2_num">2</string>
    <string name="key3_num">3</string>
    <string name="key4_num">4</string>
    <string name="key5_num">5</string>
    <string name="key6_num">6</string>
    <string name="key7_num">7</string>
    <string name="key8_num">8</string>
    <string name="key9_num">9</string>
    <string name="key0_num">0</string>
    <string name="key10_num">*</string>
    <string name="key11_num">#</string>

    <string name="key1_char">~</string>
    <string name="key2_char">ABC</string>
    <string name="key3_char">DEF</string>
    <string name="key4_char">GHI</string>
    <string name="key5_char">JKL</string>
    <string name="key6_char">MNO</string>
    <string name="key7_char">PQRS</string>
    <string name="key8_char">TUV</string>
    <string name="key9_char">WXYZ</string>
    <string name="key0_char">+</string>
    <string name="key10_char">(P)</string>
    <string name="key11_char">(W)</string>

    <string name="title_search">Search contacts</string>
    <string name="title_favourite">Favourites</string>
    <string name="title_recent">Recent</string>
    <string name="title_contact">Contacts</string>

    <string name="menu_fav_add">Add to favourites</string>
    <string name="menu_fav_remove">Remove from favourites</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_call">Call</string>
    <string name="menu_call_detail">Call details</string>
    <string name="menu_copy">Copy number</string>
    <string name="menu_block">Block</string>
</resources>
